Forge: Revert to 1.20.1